fix: adjust line height for improved readability

--- a/src/styles/base/base.css
+++ b/src/styles/base/base.css
@@ -10,7 +10,7 @@
 
     --un-font-family-normal: "Iosevka Slab Web", monospace;
     --un-font-family-heading: "PP Mondwest", monospace;
-    --un-line-height-normal: 1.6;
+    --un-line-height-normal: 1.5;
     --un-line-height-heading: 1.25;
 
     --un-text-scale-ratio: 1.2;
